2025-08-06T01:00:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16764850140 # 727
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-06
* notice: last 14d: unq all: 3 4
* notice: prev accum: outdated-unq outdated-all / unq all: 458 1475 / 461 1479
* notice: next accum: outdated-unq outdated-all / unq all: 459 1476 / 462 1480
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-07-22] / [2025-08-05]

2025-08-01T01:06:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16663584496 # 722
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-01
* notice: last 14d: unq all: 3 4
* notice: prev accum: outdated-unq outdated-all / unq all: 458 1475 / 460 1477
* notice: next accum: outdated-unq outdated-all / unq all: 458 1475 / 461 1479
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2025-07-31]

2025-07-31T00:59:33Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16637172806 # 721
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-31
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 457 1473 / 459 1476
* notice: next accum: outdated-unq outdated-all / unq all: 458 1475 / 460 1477
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-07-16] / [2025-07-30]

2025-07-26T00:57:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16534330906 # 716