@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-08-06T01:00:07Z",
-  "count_outdated" : 1476,
-  "uniques_outdated" : 459,
+  "timestamp" : "2025-08-14T00:56:32Z",
+  "count_outdated" : 1477,
+  "uniques_outdated" : 460,
   "count" : 1480,
   "uniques" : 462,
   "views" : [
-    {
-      "timestamp": "2025-07-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-07-31T00:00:00Z",
       "count": 2,
